Requirements and readme

--- a/python-runinference/anomaly_detection/anomaly_detection_opportunities.ipynb
+++ b/python-runinference/anomaly_detection/anomaly_detection_opportunities.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
+   "source": [
+    "Install and import dependencies"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import hdbscan\n",
@@ -24,18 +41,24 @@
     "from apache_beam.ml.inference.base import KeyedModelHandler\n",
     "from autoembedder import Autoembedder\n",
     "import apache_beam.runners.interactive.interactive_beam as ib"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "data = pd.read_csv('dtc_opportunity.csv')\n",
-    "train, test = train_test_split(data, test_size=0.33)\n",
+    "train, test = train_test_split(data, test_size=0.33, random_state=21)\n",
     "train.to_csv('dtc_opportunity_train.csv', index=False)\n",
-    "test.to_csv('dtc_opportunity_test.csv', index=False)"
+    "test.to_csv('dtc_opportunity_test.csv', index=False)\n",
+    "\n",
+    "# pretrained_embedder_path = f\"gs://{PROJECT_ID}-ml-examples/{MODEL_NAME}/pytorch_model.bin\"\n",
+    "# pretrained_anomaly_detection_path = f\"gs://{PROJECT_ID}-ml-examples/{MODEL_NAME}/pytorch_model.bin\""
    ],
    "metadata": {
     "collapsed": false
@@ -44,7 +67,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Function for one-hot encoding the data"
+    "Function for one-hot encoding the data. Convert the categorical columns to numerical"
    ],
    "metadata": {
     "collapsed": false
@@ -69,9 +92,21 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
-    "Custom wrappers for embedding and clustering models"
+    "### Custom wrappers for embedding and clustering models\n",
+    "These custom handlers are used to determine the way the data processed before the input to RunInference:\n",
+    "1. For anomaly detection model\n",
+    "2. For PyTorch model"
    ],
    "metadata": {
     "collapsed": false
@@ -122,7 +157,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Decode predictions pardo"
+    "Decode predictions ParDo"
    ],
    "metadata": {
     "collapsed": false
