--- a/python-runinference/anomaly_detection/train.ipynb
+++ b/python-runinference/anomaly_detection/train.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "input_data = pd.read_csv('../data/dtc_opportunity.csv')\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "hashed_input_data = ce_hash.fit_transform(input_data)\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "train_df, valid_df = train_test_split(hashed_input_data,\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "parameters = {\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "train_dl = dataloader(train_df, parameters)\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -174,7 +174,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "262996538fec4effbf14d7ae550ab4c5"
+       "model_id": "29324ec83f9d47ba874b3a368572d0f9"
       }
      },
      "metadata": {},
@@ -184,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10]: validation loss: 0.4662085\n"
+      "Epoch [1/10]: validation loss: 0.9302637\n"
      ]
     },
     {
@@ -193,7 +193,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "776cd2359a9c4980b1d8960042446e96"
+       "model_id": "d0629b74b5ba44968d1712719e1279d1"
       }
      },
      "metadata": {},
@@ -203,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [2/10]: validation loss: 0.2690385\n"
+      "Epoch [2/10]: validation loss: 0.6086464\n"
      ]
     },
     {
@@ -212,7 +212,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c219a16711584cceaa37ac1327394eea"
+       "model_id": "c4a3fd3193034d2aa59a19dfcae11fbf"
       }
      },
      "metadata": {},
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [3/10]: validation loss: 0.1422503\n"
+      "Epoch [3/10]: validation loss: 0.3231594\n"
      ]
     },
     {
@@ -231,7 +231,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0f4ffbda19924fb387c55e34837618be"
+       "model_id": "b0b720c072bd4878a9118e3181a57460"
       }
      },
      "metadata": {},
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [4/10]: validation loss: 0.0793600\n"
+      "Epoch [4/10]: validation loss: 0.1726481\n"
      ]
     },
     {
@@ -250,7 +250,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6303f7500ad74906b6d94f556839ba9b"
+       "model_id": "4b63b5f9d0ae43cc836189037a3a2ad3"
       }
      },
      "metadata": {},
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [5/10]: validation loss: 0.0491428\n"
+      "Epoch [5/10]: validation loss: 0.0993392\n"
      ]
     },
     {
@@ -269,7 +269,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "deb983f1af2144fc8be1a05abfa6160b"
+       "model_id": "8b1d661c08a4462fb52c4f980a88ac9c"
       }
      },
      "metadata": {},
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [6/10]: validation loss: 0.0346992\n"
+      "Epoch [6/10]: validation loss: 0.0620715\n"
      ]
     },
     {
@@ -288,7 +288,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7ee9ddd69efa43ab9603624261ffce68"
+       "model_id": "0d6d4226d03e44d1b8a50c6e5251cff1"
       }
      },
      "metadata": {},
@@ -298,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [7/10]: validation loss: 0.0278404\n"
+      "Epoch [7/10]: validation loss: 0.0430858\n"
      ]
     },
     {
@@ -307,7 +307,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "eed2886eb650458b802bebac610eabd7"
+       "model_id": "20ae1f3bae964220b05331ab20c8d8e8"
       }
      },
      "metadata": {},
@@ -317,7 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [8/10]: validation loss: 0.0244951\n"
+      "Epoch [8/10]: validation loss: 0.0333629\n"
      ]
     },
     {
@@ -326,7 +326,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7aa8b335b4de4a4b93729b763c8b4657"
+       "model_id": "627736d0b7804fca9865bde00462873d"
       }
      },
      "metadata": {},
@@ -336,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [9/10]: validation loss: 0.0227424\n"
+      "Epoch [9/10]: validation loss: 0.0282993\n"
      ]
     },
     {
@@ -345,7 +345,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6a829a161096446aaf623526b26780f4"
+       "model_id": "d36bfa432a9942c0b66bae86bc690394"
       }
      },
      "metadata": {},
@@ -355,14 +355,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/10]: validation loss: 0.0217161\n"
+      "Epoch [10/10]: validation loss: 0.0255646\n"
      ]
     },
     {
      "data": {
       "text/plain": "Autoembedder(\n  (embeddings): ModuleList(\n    (0): Embedding(64, 32)\n  )\n  (encoder): Sequential(\n    (0): Linear(in_features=33, out_features=25, bias=True)\n    (1): Linear(in_features=25, out_features=20, bias=True)\n    (2): Linear(in_features=20, out_features=10, bias=True)\n  )\n  (decoder): Sequential(\n    (0): Linear(in_features=10, out_features=20, bias=True)\n    (1): Linear(in_features=20, out_features=25, bias=True)\n    (2): Linear(in_features=25, out_features=33, bias=True)\n  )\n)"
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "torch.save(model.state_dict(), 'pretrained/encoder.pth')"
@@ -400,13 +400,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "Autoembedder(\n  (embeddings): ModuleList(\n    (0): Embedding(64, 32)\n  )\n  (encoder): Sequential(\n    (0): Linear(in_features=33, out_features=25, bias=True)\n    (1): Linear(in_features=25, out_features=20, bias=True)\n    (2): Linear(in_features=20, out_features=10, bias=True)\n  )\n  (decoder): Sequential(\n    (0): Linear(in_features=10, out_features=20, bias=True)\n    (1): Linear(in_features=20, out_features=25, bias=True)\n    (2): Linear(in_features=25, out_features=33, bias=True)\n  )\n)"
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "test_df = pd.read_csv('../data/dtc_opportunity_test.csv')"
@@ -432,7 +432,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Fit anomaly detector"
+    "Fit anomaly detector, pack into dict and then save for later use"
    ],
    "metadata": {
     "collapsed": false
@@ -440,22 +440,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "['anomaly_detection_single.model']"
+      "text/plain": "['./pretrained/model.params']"
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import hdbscan\n",
-    "from joblib import dump, load\n",
+    "\n",
+    "from joblib import dump\n",
+    "\n",
+    "# adding model specific parameters to serialized file\n",
+    "# in our case we only have 1 feature that represented by number: amount\n",
     "clusterer = hdbscan.HDBSCAN(prediction_data=True).fit(train_df['Amount'].to_numpy().reshape(-1, 1))\n",
-    "dump(clusterer, 'anomaly_detection_single.model')"
+    "additional_parameters = {'params': parameters, 'list_cat': list_cat, 'num_cont_features': 1}\n",
+    "\n",
+    "\n",
+    "dump(clusterer, './pretrained/anomaly_detection.model')\n",
+    "dump(additional_parameters, './pretrained/model.params')"
    ],
    "metadata": {
     "collapsed": false
@@ -463,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot: ylabel='$\\\\lambda$ value'>"
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -491,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "outputs": [],
    "source": [],
    "metadata": {
