New directories structure

--- a/Dataflow/ML/runinference/Salesforce/anomaly_detection/pipeline_test.ipynb
+++ b/Dataflow/ML/runinference/Salesforce/anomaly_detection/pipeline_test.ipynb
@@ -62,8 +62,8 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../data/dtc_opportunity_train.csv')\n",
-    "test = pd.read_csv('../data/dtc_opportunity_test.csv')"
+    "train = pd.read_csv('../../../data/Salesforce/dtc_opportunity_train.csv')\n",
+    "test = pd.read_csv('../../../data/Salesforce/dtc_opportunity_test.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -158,8 +158,8 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "test_2entries = pd.read_csv('../data/dtc_opportunity_test.csv')[:2]\n",
-    "test_2entries.to_csv('../data/test.csv', index=False)"
+    "test_2entries = pd.read_csv('../../../data/Salesforce/dtc_opportunity_test.csv')[:2]\n",
+    "test_2entries.to_csv('../../../data/Salesforce/test.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false
@@ -237,7 +237,7 @@
     }
    ],
    "source": [
-    "data = process_with_ptransform(data_csv='../data/test.csv')"
+    "data = process_with_ptransform(data_csv='../../../data/Salesforce/test.csv')"
    ],
    "metadata": {
     "collapsed": false
