--- a/Dataflow/ML/runinference/Salesforce/tfx_regression/train.ipynb
+++ b/Dataflow/ML/runinference/Salesforce/tfx_regression/train.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "def process_data():\n",
     "    dfs = []\n",
-    "    for csv in ('../data/dtc_opportunity_train.csv', '../data/dtc_opportunity_test.csv'):\n",
+    "    for csv in ('../../../data/Salesforce/dtc_opportunity_train.csv', '../../../data/Salesforce/dtc_opportunity_test.csv'):\n",
     "        with beam.Pipeline(InteractiveRunner()) as p:\n",
     "            input_data = p | \"Read CSV\" >> beam.dataframe.io.read_csv(csv)\n",
     "            # For now dropping dates\n",
