Rename ml folders

--- a/dataflow/ml/salesforce/tfx/regression/train.ipynb
+++ b/dataflow/ml/salesforce/tfx/regression/train.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "def process_data():\n",
     "    dfs = []\n",
-    "    for csv in ('../../../data/Salesforce/dtc_opportunity_train.csv', '../../../data/Salesforce/dtc_opportunity_test.csv'):\n",
+    "    for csv in ('../../../../data/salesforce/dtc_opportunity_train.csv', '../../../../data/salesforce/dtc_opportunity_test.csv'):\n",
     "        with beam.Pipeline(InteractiveRunner()) as p:\n",
     "            input_data = p | \"Read CSV\" >> beam.dataframe.io.read_csv(csv)\n",
     "            # For now dropping dates\n",
@@ -590,7 +590,7 @@
     "\n",
     "\n",
     "with beam.Pipeline(InteractiveRunner()) as p:\n",
-    "    data = (p | \"Read CSV\" >> beam.dataframe.io.read_csv('../anomaly_detection/dtc_opportunity_test.csv'))\n",
+    "    data = (p | \"Read CSV\" >> beam.dataframe.io.read_csv('../../../../data/salesforce/dtc_opportunity_test.csv'))\n",
     "    data = data.drop(['Billing State/Province',\n",
     "                                  'Account Name',\n",
     "                                  'Product Name',\n",
