Fix path to data in train.ipynb

--- a/dataflow/ml/salesforce/pytorch/anomaly_detection/train.ipynb
+++ b/dataflow/ml/salesforce/pytorch/anomaly_detection/train.ipynb
@@ -48,7 +48,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "input_data = pd.read_csv('../data/dtc_opportunity.csv')\n",
+    "input_data = pd.read_csv(../../../../data/salesforce/dtc_opportunity.csv')\n",
     "\n",
     "torch.set_default_dtype(torch.float64)\n",
     "cat_columns = [x for x in list(set(input_data.columns) - {'Amount'})]\n",
@@ -423,7 +423,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv('../data/dtc_opportunity_test.csv')"
+    "test_df = pd.read_csv('../../../../data/salesforce/dtc_opportunity_test.csv')"
    ],
    "metadata": {
     "collapsed": false
