--- a/dataflow/ml/salesforce/pytorch/anomaly_detection/pipeline_test.ipynb
+++ b/dataflow/ml/salesforce/pytorch/anomaly_detection/pipeline_test.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "    amount_mean = 1137889.913561848\n",
     "    amount_std = 1197302.0975264315\n",
-    "\n",
+    "    # These values were counted on test data and are unique for each train set and features present\n",
     "\n",
     "    target_list = [getattr(bq_row, feature_name) for feature_name in set(bq_row._fields)-set(num_fields)-set(id_field)]\n",
     "    start_t = time.time()\n",
@@ -146,7 +146,9 @@
     "        input_data['Id'] = input_data.index\n",
     "        input_data = beam.dataframe.convert.to_pcollection(input_data)\n",
     "\n",
-    "        input_data = input_data | AnomalyDetection(encoder_uri='./pretrained/encoder.pth', model_uri='./pretrained/anomaly_detection.model', params_uri='./pretrained/model.params')\n",
+    "        input_data = input_data | AnomalyDetection(encoder_uri='./pretrained/encoder.pth',\n",
+    "                                                   model_uri='./pretrained/anomaly_detection.model',\n",
+    "                                                   params_uri='./pretrained/model.params')\n",
     "        return ib.collect(input_data)"
    ],
    "metadata": {
@@ -170,6 +172,13 @@
    "execution_count": 8,
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:apache_beam.runners.interactive.interactive_environment:Dependencies required for Interactive Beam PCollection visualization are not available, please use: `pip install apache-beam[interactive]` to install necessary dependencies to enable all data visualization features.\n"
+     ]
+    },
+    {
      "data": {
       "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
      },
@@ -177,17 +186,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pipeline.anomaly_detection.anomaly_detection.CustomPytorchModelHandlerTensor object at 0x000002146EA60220>\n",
-      "PCollection[Unbatch 'set_column_DataFrame_2286778976096'.None]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n            <link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css\" integrity=\"sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh\" crossorigin=\"anonymous\">\n            <div id=\"progress_indicator_64564313f7eb1f8f271fdded3be20586\">\n              <div class=\"spinner-border text-info\" role=\"status\"></div>\n              <span class=\"text-info\">Processing... collect</span>\n            </div>\n            "
+      "text/html": "\n            <link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css\" integrity=\"sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh\" crossorigin=\"anonymous\">\n            <div id=\"progress_indicator_4c8500bc9dfdac2c15b7ce22c5dedc35\">\n              <div class=\"spinner-border text-info\" role=\"status\"></div>\n              <span class=\"text-info\">Processing... collect</span>\n            </div>\n            "
      },
      "metadata": {},
      "output_type": "display_data"
@@ -212,7 +213,7 @@
     },
     {
      "data": {
-      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n            $(\"#progress_indicator_64564313f7eb1f8f271fdded3be20586\").remove();\n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n            $(\"#progress_indicator_64564313f7eb1f8f271fdded3be20586\").remove();\n          });\n        }"
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n            $(\"#progress_indicator_4c8500bc9dfdac2c15b7ce22c5dedc35\").remove();\n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n            $(\"#progress_indicator_4c8500bc9dfdac2c15b7ce22c5dedc35\").remove();\n          });\n        }"
      },
      "metadata": {},
      "output_type": "display_data"
