--- a/dataflow/ml/salesforce/pytorch/anomaly_detection/train.ipynb
+++ b/dataflow/ml/salesforce/pytorch/anomaly_detection/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     " # Copyright 2023 Akvelon Inc.\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -44,11 +44,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "We encode the categorical columns with torch and scale the numerical amount field"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "input_data = pd.read_csv(../../../../data/salesforce/dtc_opportunity.csv')\n",
+    "input_data = pd.read_csv('../../../../data/salesforce/dtc_opportunity.csv')\n",
     "\n",
     "torch.set_default_dtype(torch.float64)\n",
     "cat_columns = [x for x in list(set(input_data.columns) - {'Amount'})]\n",
